# als-task

./: .gitignore  Cargo.toml  README.md  database.sql  tasks.db  tasks.json  test
src/: database.rs  lib.rs  main.rs  main_copy.rs  main_copy_copy.rs  model.rs  models.rs  operation.rs  run.rs  tasks.db  ui.rs
src/database/: groups.rs  mod.rs  tasks.rs
src/handles/: mod.rs  task_groups.rs  tasks.rs
src/handles/apps/: mod.rs  modify.rs  movement.rs
src/handles/groups/: mod.rs  modify.rs  movement.rs
src/operations/: app.rs  mod.rs  others.rs  run.rs  task.rs
src/ui/: groups.rs  layout.rs  mod.rs  tasks.rs
src/utils/: app_impl.rs  mod.rs  others.rs  task_impl.rs
