[package]
name = "als-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
tui-textarea = "*"
crossterm = "0.25"
chrono = "0.4"
rs-snowflake = "*"
unicode-width = "0.1.7"
rusqlite = { version = "0.28.0", features = ["bundled"] }
# chrono = "0.4"
# rs-snowflake = "*"
# serde_json = "1.0"
# serde = { version = "1.0.147", features = ["derive"] }
# sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
# actix-web = "4"